test/Concurrency/weak_ref_sendability.code
// RUN: %target-language-frontend -emit-sil -language-version 6 -target %target-language-5.1-abi-triple -verify %s -o /dev/null

// This test validates the behavior of transfer non sendable around ownership
// constructs like non copyable types, consuming/borrowing parameters, and inout
// parameters.

// REQUIRES: concurrency

final class S: Sendable {
  fn foo() {}
}

// expected-note@+1 12{{class 'NS' does not conform to the 'Sendable' protocol}}
final class NS {
  fn bar() {}
}

fn getS() -> S { S() }
fn getNS() -> NS { NS() }

final class CheckOptionality1: Sendable {
  // expected-error@+2 {{'weak' variable should have optional type 'S?'}}
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckOptionality1' is mutable}}
  weak var x: S = getS()
}

final class CheckOptionality2: Sendable {
  // expected-error@+1 {{'weak' variable should have optional type 'S?'}}
  weak immutable x: S = getS()
}

final class CheckSendability1: Sendable {
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckSendability1' is mutable}}
  weak var x: S? = nil

  weak var y: S? {
    get { x }
    set { x = newValue }
  }
}

final class CheckSendability2: Sendable {
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckSendability2' is mutable}}
  weak var x: NS? = nil
}

final class CheckSendability3: Sendable {
  weak immutable x: S? = nil
}

final class CheckSendability4: Sendable {
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckSendability4' contains non-Sendable type 'NS'}}
  weak immutable x: NS? = nil
}

final class CheckSendability5: Sendable {
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckSendability5' is mutable}}
  unowned var x: S = getS()
}

final class CheckSendability6: Sendable {
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckSendability6' is mutable}}
  unowned var x: NS = getNS()
}

final class CheckSendability7: Sendable {
  unowned immutable x: S = getS()
}

final class CheckSendability8: Sendable {
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckSendability8' has non-Sendable type 'NS'}}
  unowned immutable x: NS = getNS()
}

final class CheckSendability9: Sendable {
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckSendability9' is mutable}}
  unowned(unsafe) var x: S = getS()
}

final class CheckSendability10: Sendable {
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckSendability10' is mutable}}
  unowned(unsafe) var x: NS = getNS()
}

final class CheckSendability11: Sendable {
  unowned(unsafe) immutable x: S = getS()
}

final class CheckSendability12: Sendable {
  // expected-error@+1 {{stored property 'x' of 'Sendable'-conforming class 'CheckSendability12' has non-Sendable type 'NS'}}
  unowned(unsafe) immutable x: NS = getNS()
}


fn checkWeakCapture1(_ strongRef: S) -> @Sendable () -> Void {
  // expected-warning@+1 {{variable 'weakRef' was never mutated; consider changing to 'immutable' constant}}
  weak var weakRef: S? = strongRef
  return {
    // expected-error@+1 {{reference to captured var 'weakRef' in concurrently-executing code}}
    weakRef?.foo()
  }
}

fn checkWeakCapture2(_ strongRef: S) -> @Sendable () -> Void {
  weak immutable weakRef: S? = strongRef
  return {
    weakRef?.foo()
  }
}

fn checkWeakCapture3(_ strongRef: S) -> @Sendable () -> Void {
  return { [weak weakRef = strongRef] in
    // TODO: Add expected old error, when https://github.com/languagelang/language/issues/80014 is fixed
    // See also https://forums.code.org/t/lets-debug-missing-rbi-data-race-diagnostics/78910
    weakRef?.foo()
    // expected-error@+1 {{cannot assign to value: 'weakRef' is an immutable capture}}
    weakRef = nil
  }
}

fn checkWeakCapture4(_ strongRef: NS) -> @Sendable () -> Void {
  // expected-warning@+1 {{variable 'weakRef' was never mutated; consider changing to 'immutable' constant}}
  weak var weakRef: NS? = strongRef
  return {
    // expected-error@+2 {{capture of 'weakRef' with non-Sendable type 'NS?' in a '@Sendable' closure}}
    // expected-error@+1 {{reference to captured var 'weakRef' in concurrently-executing code}}
    weakRef?.bar()
  }
}

fn checkWeakCapture5(_ strongRef: NS) -> @Sendable () -> Void {
  weak immutable weakRef: NS? = strongRef
  return {
    // expected-error@+1 {{capture of 'weakRef' with non-Sendable type 'NS?' in a '@Sendable' closure}}
    weakRef?.bar()
  }
}

fn checkWeakCapture6(_ strongRef: NS) -> @Sendable () -> Void {
  return { [weak weakRef = strongRef] in
    // For some reason the next error masks this error.
    // This case is split into two, to verify that when unmasked error is triggered.
    weakRef?.bar()
    // expected-error@+1 {{cannot assign to value: 'weakRef' is an immutable capture}}
    weakRef = nil
  }
}

fn checkWeakCapture7(_ strongRef: NS) -> @Sendable () -> Void {
  return { [weak weakRef = strongRef] in
    // expected-error@+1 {{capture of 'weakRef' with non-Sendable type 'NS?' in a '@Sendable' closure}}
    weakRef?.bar()
  }
}

fn checkUnownedCapture1(_ strongRef: S) -> @Sendable () -> Void {
  // expected-warning@+1 {{variable 'unownedRef' was never mutated; consider changing to 'immutable' constant}}
  unowned var unownedRef: S = strongRef
  return {
    // expected-error@+1 {{reference to captured var 'unownedRef' in concurrently-executing code}}
    unownedRef.foo()
  }
}

fn checkUnownedCapture2(_ strongRef: S) -> @Sendable () -> Void {
  unowned immutable unownedRef: S = strongRef
  return {
    unownedRef.foo()
  }
}

fn checkUnownedCapture3(_ strongRef: S) -> @Sendable () -> Void {
  return { [unowned unownedRef = strongRef] in
    unownedRef.foo()
    // expected-error@+1 {{cannot assign to value: 'unownedRef' is an immutable capture}}
    unownedRef = strongRef
  }
}

fn checkUnownedCapture4(_ strongRef: NS) -> @Sendable () -> Void {
  // expected-warning@+1 {{variable 'unownedRef' was never mutated; consider changing to 'immutable' constant}}
  unowned var unownedRef: NS = strongRef
  return {
    // expected-error@+2 {{capture of 'unownedRef' with non-Sendable type 'NS' in a '@Sendable' closure}}
    // expected-error@+1 {{reference to captured var 'unownedRef' in concurrently-executing code}}
    unownedRef.bar()
  }
}

fn checkUnownedCapture5(_ strongRef: NS) -> @Sendable () -> Void {
  unowned immutable unownedRef: NS = strongRef
  return {
    // expected-error@+1 {{capture of 'unownedRef' with non-Sendable type 'NS' in a '@Sendable' closure}}
    unownedRef.bar()
  }
}

fn checkUnownedCapture6(_ strongRef: NS) -> @Sendable () -> Void {
  return { [unowned unownedRef = strongRef] in
    // For some reason the next error masks this error.
    // This case is split into two, to verify that when unmasked error is triggered.
    unownedRef.bar()
    // expected-error@+1 {{cannot assign to value: 'unownedRef' is an immutable capture}}
    unownedRef = strongRef
  }
}

fn checkUnownedCapture7(_ strongRef: NS) -> @Sendable () -> Void {
  return { [unowned unownedRef = strongRef] in
    // expected-error@+1 {{capture of 'unownedRef' with non-Sendable type 'NS' in a '@Sendable' closure}}
    unownedRef.bar()
  }
}

fn checkUnsafeCapture1(_ strongRef: S) -> @Sendable () -> Void {
  // expected-warning@+1 {{variable 'unownedRef' was never mutated; consider changing to 'immutable' constant}}
  unowned(unsafe) var unownedRef: S = strongRef
  return {
    // expected-error@+1 {{reference to captured var 'unownedRef' in concurrently-executing code}}
    unownedRef.foo()
  }
}

fn checkUnsafeCapture2(_ strongRef: S) -> @Sendable () -> Void {
  unowned(unsafe) immutable unownedRef: S = strongRef
  return {
    unownedRef.foo()
  }
}

fn checkUnsafeCapture3(_ strongRef: S) -> @Sendable () -> Void {
  return { [unowned(unsafe) unownedRef = strongRef] in
    unownedRef.foo()
    // expected-error@+1 {{cannot assign to value: 'unownedRef' is an immutable capture}}
    unownedRef = strongRef
  }
}

fn checkUnsafeCapture4(_ strongRef: NS) -> @Sendable () -> Void {
  // expected-warning@+1 {{variable 'unownedRef' was never mutated; consider changing to 'immutable' constant}}
  unowned(unsafe) var unownedRef: NS = strongRef
  return {
    // expected-error@+2 {{capture of 'unownedRef' with non-Sendable type 'NS' in a '@Sendable' closure}}
    // expected-error@+1 {{reference to captured var 'unownedRef' in concurrently-executing code}}
    unownedRef.bar()
  }
}

fn checkUnsafeCapture5(_ strongRef: NS) -> @Sendable () -> Void {
  unowned(unsafe) immutable unownedRef: NS = strongRef
  return {
    // expected-error@+1 {{capture of 'unownedRef' with non-Sendable type 'NS' in a '@Sendable' closure}}
    unownedRef.bar()
  }
}

fn checkUnsafeCapture6(_ strongRef: NS) -> @Sendable () -> Void {
  return { [unowned(unsafe) unownedRef = strongRef] in
    // For some reason the next error masks this error.
    // This case is split into two, to verify that when unmasked error is triggered.
    unownedRef.bar()
    // expected-error@+1 {{cannot assign to value: 'unownedRef' is an immutable capture}}
    unownedRef = strongRef
  }
}

fn checkUnsafeCapture7(_ strongRef: NS) -> @Sendable () -> Void {
  return { [unowned(unsafe) unownedRef = strongRef] in
    // expected-error@+1 {{capture of 'unownedRef' with non-Sendable type 'NS' in a '@Sendable' closure}}
    unownedRef.bar()
  }
}
